# acidcam-gpu

./: .gitignore  LICENSE  README.html  README.md
ACMX2/: CMakeLists.txt  README.md  acmx.cpp  audio.cpp  audio.hpp  audio_transfer.cpp  system.log.txt  version_info.hpp
ACMX2/MXWrite/: README.md
ACMX2/data/: framebuffer.glsl  vert.glsl  vertex.glsl
ACMX2/examples/: color_swirl_c.glsl  index.txt  vertex.glsl
ACMX2/interface/: CMakeLists.txt  README.md  audio-window.cpp  audio-window.hpp  editor.cpp  editor.hpp  gpufilter.cpp  gpufilter.hpp  interface.pro  main.cpp  main_window.cpp  main_window.hpp  prop.cpp  prop.hpp  qresource.qrc  settings.cpp  settings.hpp  shader.cpp  shader.hpp  shaderlibrary.cpp  shaderlibrary.hpp  shaderpass.cpp  shaderpass.hpp  syntax.cpp  syntax.hpp  version_info.hpp
ACMX2/macos/: README.md  build-macos.sh  install-dep.sh  install.sh
ACMX2/models/: compress.py  cone.mxmod  crystal_cave.mxmod  skybox1.mxmod  skybox_cross.mxmod  skybox_pyramid_top.mxmod  twisted_torus.mxmod
ACMX2/models/compressed/: cube_closed_pyramid.mxmod.z  cube_pyramid.mxmod.z  skyshell.mxmod.z  tube_caps.mxmod.z
ACMX2/shader.packs/: README.md
ACMX2/shader_generator/: CMakeLists.txt  gencode.cpp  mx2-ollama.cpp
MXWrite/: CMakeLists.txt  MXWriteConfig.cmake.in
MXWrite/opencv_example/: CMakeLists.txt
acidcam-gpu/: CMAKE_PACKAGE_README.md  CMAKE_USAGE.md  CMakeLists.txt  acidcam-gpuConfig.cmake.in  acidcam-gpuConfigVersion.cmake.in  acidcam-gpuTargets.cmake.in  example-CMakeLists.txt
acidcam-gpu/MXWrite/: CMakeLists.txt  mxwrite.cpp  mxwrite.hpp
acidcam-gpu/MXWrite/opencv_example/: opencv_ex.cpp
acidcam-gpu/app/: main_cv.cu
acidcam-gpu/include/ac-gpu/: ac-gpu.hpp
acidcam-gpu/scripts/: check_file.sh  compile_opencv_cuda.sh  init_logitech_brio.sh
acidcam-gpu/src/: filters.cu
first_filter/: Makefile  selfalpha.cu
podman/: Containerfile  run-acmx2-bash.sh  run-acmx2.sh
scripts/: build-acmx2.sh  encode_gif.sh
